--- a/sass/services.scss
+++ b/sass/services.scss
@@ -102,6 +102,9 @@ div {
       float: left;
       width: 70%;
       padding-left: 8%;
+      h2 {
+        font-size: 25px;
+      }
     }
     a {
       float: right;
@@ -125,7 +128,7 @@ div {
       // margin: 0 8%;
       color: #ffffff;
       h2 {
-        font-size: 3.1em;
+        // font-size: 3.1em;
         margin-bottom: .3em;
         font-weight: 900;
       }
@@ -173,6 +176,7 @@ div {
 }
 
 .four {
+  background-color: #ffd66b;
   max-height: 383px;
   .left, .right {
     float: left;
@@ -183,7 +187,6 @@ div {
     }
   }
   .right {
-    background-color: #ffd66b;
     text-align: center;
     padding: 9% 5%;
     h2 {
@@ -207,7 +210,11 @@ div {
     width: 50%;
     img {
       height: 100%;
+      width: 100%;
     }
+  }
+  .left {
+    padding: 0 20px;
   }
   .right {
     text-align: left;
@@ -239,40 +246,40 @@ div {
   }
 }
 
-.six {
-  max-height: 362px;
-  .col {
-    float: left;
-    width: 25%;
-    padding: 0;
-    img {
-      width: 100%;
-      height: 100%;
-    }
-    .content {
-      text-align: center;
-      padding: 34% 6%;
-      h3 {
-        font-size: 1.16em;
-        letter-spacing: .03em;
-        font-weight: 800;
-      }
-      p {
-        padding: 0;
-        margin: 0 0 1.6em;
-        font-size: 17px;
-        line-height: 1.5;
-      }
-    }
-  }
-  .text {
-    background-color: #5ecce5;
-  }
-  .t-one {
-    background-color: #e67e22;
-    color: #fff;
-  }
-}
+// .six {
+//   max-height: 362px;
+//   .col {
+//     float: left;
+//     width: 25%;
+//     padding: 0;
+//     img {
+//       width: 100%;
+//       height: 100%;
+//     }
+//     .content {
+//       text-align: center;
+//       padding: 34% 6%;
+//       h3 {
+//         font-size: 1.16em;
+//         letter-spacing: .03em;
+//         font-weight: 800;
+//       }
+//       p {
+//         padding: 0;
+//         margin: 0 0 1.6em;
+//         font-size: 17px;
+//         line-height: 1.5;
+//       }
+//     }
+//   }
+//   .text {
+//     background-color: #5ecce5;
+//   }
+//   .t-one {
+//     background-color: #e67e22;
+//     color: #fff;
+//   }
+// }
 
 .contact {
   background: url('../images/tower.jpg');
