--- a/stylesheets/aboutus.css
+++ b/stylesheets/aboutus.css
@@ -226,13 +226,59 @@ header .navbar .collapse form .navbar-nav li.active a {
 }
 
 /* line 201, ../sass/aboutus.scss */
+.distributer {
+  background: url("../images/tower.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+  background-attachment: fixed;
+  padding: 10% 7%;
+}
+/* line 208, ../sass/aboutus.scss */
+.distributer .content {
+  background-color: rgba(255, 157, 0, 0.61);
+  padding: 7% 5%;
+  color: #fff;
+  text-align: center;
+}
+/* line 213, ../sass/aboutus.scss */
+.distributer .content h2 {
+  font-size: 1.16em;
+  letter-spacing: .03em;
+  margin: 0 0 .5em;
+  line-height: 1.6em;
+  font-weight: 900;
+}
+/* line 220, ../sass/aboutus.scss */
+.distributer .content p {
+  padding: 0;
+  margin: 0 0 1.4em;
+  font-size: 18px;
+}
+/* line 225, ../sass/aboutus.scss */
+.distributer .content a .click-btn {
+  color: #fff;
+  border: 1px solid #fff;
+  background: 0;
+  padding: 15px 30px;
+  font-weight: 900;
+}
+/* line 231, ../sass/aboutus.scss */
+.distributer .content a .click-btn:hover {
+  background-color: #fff;
+  color: #000;
+  -moz-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+
+/* line 241, ../sass/aboutus.scss */
 .footer {
   background-color: #d9d9d9;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 54px 0 2em;
 }
-/* line 206, ../sass/aboutus.scss */
+/* line 246, ../sass/aboutus.scss */
 .footer a {
   text-decoration: none;
   display: inline-block;
@@ -246,7 +292,7 @@ header .navbar .collapse form .navbar-nav li.active a {
   -moz-transition: all .5s;
   transition: all .5s;
 }
-/* line 219, ../sass/aboutus.scss */
+/* line 259, ../sass/aboutus.scss */
 .footer a:before {
   font-size: 3rem;
   content: "\005E";
